--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A simple excel writer for the browser and node.js",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
+    "start": "webpack-dev-server --open",
     "test": "mocha"
   },
   "repository": {
@@ -23,9 +25,12 @@
   "homepage": "https://github.com/park-brian/excel-writer#readme",
   "devDependencies": {
     "@types/jszip": "^3.1.2",
+    "@types/mocha": "^2.2.44",
     "mocha": "^4.0.1",
     "raw-loader": "^0.5.1",
     "ts-loader": "^3.2.0",
+    "ts-node": "^3.3.0",
+    "typescript": "^2.6.2",
     "webpack": "^3.9.1",
     "webpack-dev-server": "^2.9.5"
   },
